Added CinemaHall repository and created create method in factory for stored entities

--- a/backend/dotnet/todo.txt
+++ b/backend/dotnet/todo.txt
@@ -1,2 +1,3 @@
 - Add indexes for user table (email, token)
 - Extract IOrderedTicket from ITicket
+- Refactor ProfileRepository. Move logic to the service
