--- a/backend/dotnet/todo.txt
+++ b/backend/dotnet/todo.txt
@@ -1,3 +1,2 @@
 - Add indexes for user table (email, token)
-- Extract IOrderedTicket from ITicket
-- Refactor ProfileRepository. Move logic to the service
+- Fix ticket service
